Release v1.3.0 - Fix invites - Fix "Change Nickname menu" - Fix user pill not showing nicknames - Support Spotify's "Listen Along" embeds & modals - Get featured on /r/unixporn (again)

--- a/duvbox.css
+++ b/duvbox.css
@@ -1,4 +1,4 @@
-//META{"name":"Duvbox","description":"A Discord theme based on Gruvbox, a Vim theme","author":"CircuitRCAY","version":"1.2.0"}*//
+//META{"name":"Duvbox","description":"A Discord theme based on Gruvbox, a Vim theme","author":"CircuitRCAY","version":"1.3.0"}*//
 /**
     Duvbox - adapted for Discord
     
@@ -496,4 +496,69 @@ div[class*="flexChild"] > h4[class*="title"] {
 }
 div[class*="flexChild"] > div[class*="text"] {
     color: var(--text-muted);
+}
+
+/* Fix Nickname Menu */
+div[class*="root"] > form > div[class*="content"] {
+    background-color: var(--background-secondary);
+}
+
+div[class*="root"] > form > div[class*="content"] > div[class*="input"] > h5[class*="colorStandard"] {
+    background-color: var(--background-secondary);
+    margin: 0;
+    color: var(--text-normal);
+}
+
+
+div[class*="root"] > form > div[class*="content"] > div[class*="input"] > div[class*="inputWrapper"] > input {
+    background-color: var(--background-tertiary);
+}
+
+div[class*="flex"][class*="horizontalReverse"][class*="directionRowReverse"] {
+    background-color: var(--background-floating);
+}
+
+/* Fix "Listen Along" */
+
+/* Modal */
+div[class*="modal"] > div[class*="inner"] > div[class*="modal"] > div[class*="content"] {
+    background-color: var(--background-secondary);
+}
+
+div[class*="modal"] > div[class*="inner"] > div[class*="modal"] > div[class*="content"] > div[class*="invite"] {
+    background-color: var(--background-primary);
+}
+
+div[class*="header"][class*="inFront"] {
+    background-color: var(--background-primary);
+    color: var(--text-muted);
+}
+
+div[class*="flex"][class*="directionRow"][class*="alignEnd"] > div > button {
+    background-color: var(--text-link);
+}
+
+div[class*="content"][class*="thin"] > div[class*="textArea"] > div[class*="scrollableContainer"] {
+    background-color: var(--background-primary);
+}
+
+/* Embed */
+div[id*="messages"] > div[class*="container"] > div[class*="invite"] {
+    background-color: var(--background-secondary);
+}
+
+div[id*="messages"] > div[class*="container"] > div[class*="invite"] > * > * > div[class*="header"] {
+    background-color: var(--background-secondary);
+}
+
+div[class*="details"] > a[class*="anchor"] {
+    color: var(--text-normal);
+}
+
+div[class*="state"] {
+    color: var(--text-normal);
+}
+
+div[class*="state"] > span > a[class*="anchor"] {
+    color: var(--text-normal);
 }
